oracle settings and updates

--- a/ERP.Web/appsettings.json
+++ b/ERP.Web/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "Data": {
     "Default": {
-      "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=ERP_Default_v1;Integrated Security=true",
-      "ProviderName": "System.Data.SqlClient"
+      "ConnectionString": "User Id=movie; password=movie123; Data Source=localhost:1521/db19c;",
+      "ProviderName": "Oracle.ManagedDataAccess.Client"
     },
     "Northwind": {
       "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=ERP_Northwind_v1;Integrated Security=true",
