--- a/ERP.Web/ERP.Web.csproj
+++ b/ERP.Web/ERP.Web.csproj
@@ -19,18 +19,22 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MailKit" Version="2.0.6" />
-    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.1.1" />
+    <PackageReference Include="MailKit" Version="2.6.0" />
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.8.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.60" />
     <PackageReference Include="Serenity.FluentMigrator.Runner" Version="1.6.904" />
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.3" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.2' ">
     <PackageReference Include="EPPlus" Version="4.5.2.1" />
-    <PackageReference Include="FastMember" Version="1.4.1" />
+    <PackageReference Include="FastMember" Version="1.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Serenity.Web" Version="3.9.14" />
     <PackageReference Include="Serenity.Web.Assets" Version="3.9.2" />
-    <PackageReference Include="Serenity.Scripts" Version="3.9.14" />
+    <PackageReference Include="Serenity.Scripts" Version="3.12.4" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
     <PackageReference Include="EPPlus" Version="4.5.2.1" />
