oracle changes and updates

--- a/ERP.Web/appsettings.json
+++ b/ERP.Web/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "Data": {
     "Default": {
-      "ConnectionString": "User Id=movie; password=movie123; Data Source=localhost:1521/db19c;",
+      "ConnectionString": "User Id=movieschema; password=mov123; Data Source=localhost:1521/db19c;",
       "ProviderName": "Oracle.ManagedDataAccess.Client"
     },
     "Northwind": {
